<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ENVIRONMENT">http://mydesichef.com/ticketingsoft</string>
    <string name="API_LOGIN">/user/login?user_email=%1$s&amp;user_password=%2$s&amp;imei=%3$s</string>
    <string name="API_EVENTS">/mobile_logins/myevent?id=%1$s</string>
    <string name="app_name">Check In Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="todo">TODO</string>
    <string name="nice_to_see_you_again">Nice to see you again</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="required">Required</string>
    <string name="invalid_email">Email address invalid</string>
    <string name="network_not_reachable">Network not reachable</string>
    <string name="login_loading">Login....</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="action_label_refresh">Refresh</string>
    <string name="textview">TextView</string>
    <string name="accessory">Accessory</string>
    <string name="my_events">My Events</string>
    <string name="title_activity_event_detail">EventDetail</string>
    <string name="small_text">Small Text</string>
    <string name="action_label_search">Search</string>
    <string name="event_details">Event Details...</string>
    <string name="check_in">Check In</string>
    <string name="tickets_sold">Tickets Sold</string>
    <string name="_0">0</string>
    <string name="__0">/0</string>
    <string name="attendance">Attendance</string>
    <string name="attendee_fetch">Fetching Attendees...</string>
    <string name="title_activity_event_attendee">Attendees</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logged_in_as_">Logged in as:</string>
    <string name="test_test_com">test@test.com</string>
    <string name="logout">Logout</string>
    <string name="logout_">Logout...</string>
    <string name="are_you_sure_">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="on">On</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="checkin">CheckIn</string>
    <string name="event_info">Event Info</string>
    <string name="title_activity_splash">Check In Manager</string>
	<string name="loading">Loading</string>
	<string name="scanner">Scanner</string>
	<string name="last_scanned">Last scanned : </string>
	<string name="checkinfrom">%d checked in from this device</string>
	<string name="search_hint">Keyword</string>
	<string name="action_qrcode">Scanner</string>
	<string name="just_now">just now</string>
	<string name="a_min_ago">a minute ago</string>
	<string name="minutes_ago">minutes ago</string>
	<string name="an_hour_ago">an hour ago</string>
	<string name="hours_ago">hours ago</string>
	<string name="yesterday">yesterday</string>
	<string name="days_ago">days ago</string>
	<string name="qty">Qty</string>
	<string name="at">at</string>
	<string name="no_attendees_for_the_event">No attendees for the event</string>
	
</resources>
