<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Login" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <TextView
            style="@style/heading"
            android:layout_gravity="center_vertical"
            android:text="@string/nice_to_see_you_again" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox_login"
        android:gravity="center" >

        <EditText
            android:id="@+id/username"
            style="@style/edittext"
            android:hint="@string/email_address"
            android:paddingLeft="10dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            style="@style/edittext"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:inputType="textPassword" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center" >

        <Button
            android:id="@+id/button_login"
            style="@style/loginbutton"
            android:text="@string/login" />
        
    </LinearLayout>
    

</LinearLayout>