<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_image" android:contentDescription="@string/todo"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_weight="1.00"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/attendee_name"
            style="@style/eventheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/attendee_title"
            style="@style/eventdetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview" />
    </LinearLayout>

    <Button
        android:id="@+id/checkin"
        style="@style/checkinbutton"
        android:layout_margin="10dp"
        android:minHeight="35dp"
        android:minWidth="55dp"
        android:text="@string/checkin" />

</LinearLayout>